Fix colors and spacings of headers in sidebar; fix upload disabled

--- a/client/src/components/Game/index.css
+++ b/client/src/components/Game/index.css
@@ -71,6 +71,12 @@
     color: gray;
 }
 
+.sidebarDivider {
+    font-family: "Attila Sans Sharp" !important;
+    font-size: small;
+    color: whitesmoke;
+}
+
 .examine .name h1:hover {
     color: white;
 }
